--- a/app/templates/bills.html
+++ b/app/templates/bills.html
@@ -21,7 +21,7 @@
       </th>
       <td>{{ bill.bill }}</td>
       <td>{{ bill.price }}€</td>
-      <td>{{ bill.user_id }}<button type="button" class="close" onClick="deleteBill( {{ bill.id }} )"><span aria-hidden="true">&times;</span>
+      <td>{{ bill.user.name }}<button type="button" class="close" onClick="deleteBill( {{ bill.id }} )"><span aria-hidden="true">&times;</span>
       </button></td>
       
 
