--- a/app/templates/bills.html
+++ b/app/templates/bills.html
@@ -20,8 +20,8 @@
       <th scope="row">{{ bill.id }}</a>
       </th>
       <td>{{ bill.bill }}</td>
-      <td>{{ bill.price }}€</td>
-      <td>{{ bill.user.name }}<button type="button" class="close" onClick="deleteBill( {{ bill.id }} )"><span aria-hidden="true">&times;</span>
+      <td>{{ "%.2f" % bill.price }}€</td>
+      <td>{{ bill.user.first_name }}<button type="button" class="close" onClick="deleteBill( {{ bill.id }} )"><span aria-hidden="true">&times;</span>
       </button></td>
       
 
@@ -58,8 +58,6 @@
         <button type="submit" class="btn btn-primary">Add Bill</button>
       </div>
     </form>
-
-  
 
     {% endblock %}
   </form>
